--- a/acrofestival/templates/pages/winteracro/snippets/navhome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navhome.html
@@ -1,10 +1,8 @@
           <nav id="nav">
             <ul>
               <li><a href="{% url 'winteracro' %}#included" class="">Included</a></li>
-              <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
-              <li><a href="{% url 'winterprices' %}">Pricing</a></li>
-              <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
-              <!-- <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li> -->
+              <li><a href="{% url 'winteracro' %}#info" class="">Info</a></li>
+              <li><a href="{% url 'winteracro' %}#teachers" class="">LineUp</a></li>
               <li><a  target="_blank" rel="noopener" style="background:#f3d216;" href="https://acrolama.com/events/winter-acro-festival-2022/">Register</a></li>
             </ul>
           </nav>
