--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -129,7 +129,7 @@
                     <a href="{% url 'winteraccomodation'%}"><span class="icon major style1 fas fa-bed"></span></a>
                     <h3>Accommodation</h3>
                     <p>{% tinycontent_simple 'winter_home_accomodation' %}
-                    <a class="button" href="{% url 'winteraccomodation'%}">More Info.</a>
+                    <a class="button" href="{% url 'winteraccommodation'%}">More Info.</a>
                     </p>
                 </li>
                 <li>
