--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -126,7 +126,7 @@
             </header>
             <ul class="features">
                 <li>
-                    <a href="{% url 'winteraccomodation'%}"><span class="icon major style1 fas fa-bed"></span></a>
+                    <a href="{% url 'winteraccommodation'%}"><span class="icon major style1 fas fa-bed"></span></a>
                     <h3>Accommodation</h3>
                     <p>{% tinycontent_simple 'winter_home_accomodation' %}
                     <a class="button" href="{% url 'winteraccommodation'%}">More Info.</a>
