Prices reverse link

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -140,7 +140,7 @@
                     </p>
                     </li>
                 <li>
-                    <a href="{% url 'winterprices'%}">More Info<span class="icon major style1 fas fa-money-bill-wave"></span></a>
+                    <a href="{% url 'winterconditions'%}">More Info<span class="icon major style1 fas fa-money-bill-wave"></span></a>
                     <h3>Conditions</h3>
                     <p>{% tinycontent_simple 'winter_home_prices' %}
                     <a class="button" href="{% url 'winterconditions'%}">More Info</a>
