--- a/acrofestival/templates/pages/winteracro/snippets/navnothome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navnothome.html
@@ -2,8 +2,7 @@
             <ul>
               <li><a href="{% url 'winteracro' %}" class="">Home</a></li>
               <li><a href="{% url 'winteracro' %}#included" class="">Included</a></li>
-              <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
-              <li><a href="{% url 'winterprices' %}">Pricing</a></li>
+              <li><a href="{% url 'winteracro' %}#info" class="">Info</a></li>
               <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
               <!-- <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li> -->
               <li><a  target="_blank" rel="noopener" style="background:#f3d216;" href="https://acrolama.com/events/winter-acro-festival-2022/">Register</a></li>
