--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -4,7 +4,7 @@
 <div id="wrapper">
 <!-- Header -->
     <header id="header" class="alt">
-            <span class="logo"><img src="{% static "winteracro/images/logo_2024.png"%}" alt="" /></span>
+            <span class="logo"><img src="{% static "winteracro/images/2025/winter_acro_2025_logo.png"%}" alt="Logo Winter Acro in Arosa 2025" /></span>
         <h1>{% tinycontent_simple 'winter_general_title' %}</h1>
         <p>{% tinycontent_simple 'winter_general_date' %}</br>
         <a target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/">Registration</a></p>
@@ -17,7 +17,7 @@
             <div class="spotlight">
                 <div class="content">
                     <header class="major">
-                        <h2>Winteracro 2024</h2>
+                        <h2>Winteracro 2025</h2>
                     </header>
                         <p>
                         {% tinycontent_simple 'winter_home_intro' %}
