Fix links and pics

--- a/acrofestival/templates/pages/winteracro/accommodation.html
+++ b/acrofestival/templates/pages/winteracro/accommodation.html
@@ -20,25 +20,42 @@
             <p>{% tinycontent_simple 'winter_accomodation_description' %}</p>
             <p>
             <span class="image right">
-                    <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+                    <img src="{% static "winteracro/images/2025/strela_doppel.png" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+            </span>
+            <span class="image right">
+                    <img src="{% static "winteracro/images/2025/strela_dorm.png" %}" alt="winter accommodation winter acro in strela dorms arosa" />
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_dorms' %}</h3>
             {% tinycontent_simple 'winter_accomodation_dorms' %}
+            <br>
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_dorms_url' %}">
+                    Google Maps Strela
+            </a>
             <hr>
             <span class="image left">
-                    <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+                    <img src="{% static "winteracro/images/2025/pfadiheim_draussen.png" %}" alt="winter accommodation in Arosa pfadiheim draussen" />
+            </span>
+            <span class="image left">
+                    <img src="{% static "winteracro/images/2025/pfadiheim.png" %}" alt="winter accommodation for Arosa Winter acro 2025" />
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade1' %}</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade1' %}
+            <br>
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_upgrade1_url' %}">
+                    Google Maps Pfadiheim
+            </a>
             <hr>
             <span class="image right">
-                    <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+                    <img src="{% static "winteracro/images/2025/aula.png" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+            </span>
+            <span class="image left">
+                    <img src="{% static "winteracro/images/2025/halle.png" %}" alt="winter halle for the urbanacro winter acro festival" />
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade2' %}</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade2' %}
             <br>
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_address_url' %}">
-                    Google Maps CLICK HERE
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_hall_url' %}">
+                    Google Maps Hall
             </a>
             </br>
             </p>
