--- a/acrofestival/templates/pages/winteracro/accommodation.html
+++ b/acrofestival/templates/pages/winteracro/accommodation.html
@@ -24,11 +24,10 @@
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_dorms' %}</h3>
             {% tinycontent_simple 'winter_accomodation_dorms' %}
-            <span class="image left">
+            <span class="image left clearfix">
                     <img src="{% static "winteracro/images/2025/strela_dorm.png" %}" alt="winter accommodation winter acro in strela dorms arosa" />
             </span>
-            <br>
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_dorms_url' %}">
+            <a class="button next-img" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_dorms_url' %}">
                     Google Maps Strela
             </a>
             <hr>
@@ -37,11 +36,10 @@
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade1' %}</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade1' %}
-            <span class="image right">
+            <span class="image right clearfix">
                     <img src="{% static "winteracro/images/2025/pfadiheim.png" %}" alt="winter accommodation for Arosa Winter acro 2025" />
             </span>
-            <br>
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_upgrade1_url' %}">
+            <a class="button next-img" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_upgrade1_url' %}">
                     Google Maps Pfadiheim
             </a>
             <hr>
@@ -50,11 +48,10 @@
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade2' %}</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade2' %}
-            <span class="image left">
+            <span class="image left clearfix">
                     <img src="{% static "winteracro/images/2025/halle.png" %}" alt="winter halle for the urbanacro winter acro festival" />
             </span>
-            <br>
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_hall_url' %}">
+            <a class="button next-img" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_hall_url' %}">
                     Google Maps Hall
             </a>
             </br>
