--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -7,7 +7,7 @@
             <span class="logo"><img src="{% static "winteracro/images/2025/winter_acro_2025_logo_transparent.png"%}" alt="Logo Winter Acro in Arosa 2025" /></span>
         <h1>{% tinycontent_simple 'winter_general_title' %}</h1>
         <p>{% tinycontent_simple 'winter_general_date' %}</br>
-        <a target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/">Registration</a></p>
+        <a target="_blank" rel="noopener" href="https://www.urbanacro.com/events/winter-acro-2025-arosa/">Registration</a></p>
     </header>
     {% include 'pages/winteracro/snippets/navhome.html' %}
 <!-- Main -->
@@ -24,7 +24,7 @@
                         </p>
                     <ul class="actions">
                         <li>
-                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">
+                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://www.urbanacro.com/events/winter-acro-2025-arosa/" class="button">
                                 Register
                             </a>
                         </li>
@@ -79,7 +79,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">Registration</a>
+                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://www.urbanacro.com/events/winter-acro-2025-arosa/" class="button">Registration</a>
                     </li>
                 </ul>
             </footer>
@@ -150,7 +150,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://urbanacro.com/events/winter-acro-2024/" class="button">
+                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://www.urbanacro.com/events/winter-acro-2025-arosa/" class="button">
                         Register
                     </a>
                     </li>
