--- a/acrofestival/templates/pages/winteracro/snippets/navnothome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navnothome.html
@@ -5,6 +5,6 @@
               <li><a href="{% url 'winteracro' %}#info" class="">Info</a></li>
               <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
               <!-- <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li> -->
-              <li><a  target="_blank" rel="noopener" style="background:#f3d216;" href="https://acrolama.com/events/winter-acro-festival-2022/">Register</a></li>
+              <li><a  target="_blank" rel="noopener" style="background:#f3d216;" href="https://www.urbanacro.com/events/winter-acro-2025-arosa/">Register</a></li>
             </ul>
           </nav>
