Hall in location

--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -16,7 +16,7 @@
             <p>{% tinycontent_simple 'winter_hall_description' %}</p>
             <p>
             <span class="image right">
-                    <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
+                    <img src="{% static "winteracro/images/hall.png" %}" alt="winter accommodation for the urbanacro winter acro festival" />
             </span>
             <h3>{% tinycontent_simple 'winter_hall_spa' %}</h3>
             {% tinycontent_simple 'winter_hall_spa_description' %}
