Bos Image Remove

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -132,7 +132,7 @@
             </div>
         </div>
         <!-- <div class="fullwidth-path"> -->
-        <!--         <div class="fullwidth-section-bg bg-right" style="background-image: url('{% static 'urbanacro/images/acrofestival_bos_schweiz.jpg'%}');"></div> -->
+        <!--         <div class="fullwidth-section-bg bg-right" style="background-image:"></div> -->
         <!--     <div class="col-sm-6 align-left fullwidth-column"> -->
         <!--         <article> -->
         <!--             <h3>BOS Schweiz</h3> -->
