--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -165,30 +165,36 @@
                 <!-- <u>Confirmed</u> teachers on the left. <u>To be confirmed</u> on the right. We'll keep you posted :) -->
                 <!-- </p> -->
                 <div class="box alt">
-                    <div class="row gtr-uniform">
-                        <!-- <p><h2>Kat & Jared - Duo Acrokatics</h2></p> -->
+                        <!-- <p><h2>Je & Cuzio - Acrolinks</h2></p> -->
                         <!-- <p> -->
                         <!-- <span class="image left"> -->
-                        <!--     <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_teachers_acrokatics.png"%}" alt="Winter acro from urbanacro teacher acrokatics doing acro pose"> -->
+                        <!--     <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_teachers_acrolinks.png"%}" alt="Winter acro from urbanacro teacher acrolinks doing acro pose"> -->
                         <!-- </span> -->
-                        <!-- Awesome acrobats, teachers, and people! We have been trying to get them to come for years, but it's always hard with circus artists. Very happy to have them here teaching some duo and group acrobatics!<br> -->
-                        <!-- Check them out at: <a href="https://www.instagram.com/acrokatics/">Acrokatics on Instagram</a> -->
+                        <!-- Icarian fanatics from Italy who bring us some smooth and creative tricks with a sprinkle of "Wow."<br> -->
+                        <!-- Check them out at: <a href="https://www.instagram.com/acrolinks/">Arolinks on Insta</a> -->
                         <!-- </p> -->
-                        <p><h2>Je & Cuzio - Acrolinks</h2></p>
-                        <p>
-                        <span class="image left">
-                            <img src="{% static "winteracro/images/teachers2024/urbanacro_winteracro_festival_teachers_acrolinks.png"%}" alt="Winter acro from urbanacro teacher acrolinks doing acro pose">
-                        </span>
-                        Icarian fanatics from Italy who bring us some smooth and creative tricks with a sprinkle of "Wow."<br>
-                        Check them out at: <a href="https://www.instagram.com/acrolinks/">Arolinks on Insta</a>
-                        </p>
-                        <p><h2>Bruno</h2></p>
-                        <p>
-                        <span class="image left">
-                            <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2024"></img>
-                        </span>
-                        I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. It's hard to find the words to describe such a warm hearted clown, you just have to meet him. Happy to have you with us my friend!
-                        </p>
+                    <div class="row gtr-uniform">
+                        {% for teacher in teachers %}
+                            <p><h2>{{ teacher.name }}{% if teacher.title %} - {{ teacher.title }}{% endif %}</h2></p>
+                            <p>
+                                <span class="image left">
+                                    <img src="{{ teacher.image.url }}" alt="{{ teacher.name }} - Winter acro teacher">
+                                </span>
+                                {{ teacher.description|safe }}
+                                {% if teacher.instagram or teacher.facebook or teacher.website %}
+                                    <br>Check them out at:
+                                    {% if teacher.instagram %}
+                                        <a href="{{ teacher.instagram }}">Instagram</a>
+                                    {% endif %}
+                                    {% if teacher.facebook %}
+                                        <a href="{{ teacher.facebook }}">Facebook</a>
+                                    {% endif %}
+                                    {% if teacher.website %}
+                                        <a href="{{ teacher.website }}">Website</a>
+                                    {% endif %}
+                                {% endif %}
+                            </p>
+                        {% endfor %}
                     </div>
             </div>
         </section>
