--- a/acrofestival/templates/pages/winteracro/conditions.html
+++ b/acrofestival/templates/pages/winteracro/conditions.html
@@ -17,6 +17,7 @@
                 <p>{% tinycontent_simple 'winter_prices_description' %}
                 <h3>Price list</h3>
                 <ul>
+                    <li>{% tinycontent_simple 'winter_prices_short' %}</li>
                     <li>{% tinycontent_simple 'winter_prices_full' %}</li>
                     <li>{% tinycontent_simple 'winter_prices_full_nosleep' %}</li>
                     <li>{% tinycontent_simple 'winter_prices_single' %}</li>
