Clean some urls on dap

--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -80,7 +80,7 @@
 
             <div class="collapse navbar-collapse" id="nav">
               <ul class="nav navbar-nav navbar-right uppercase">
-                <li><a data-toggle="elementscroll" href="https://www.acrolama.com/events/dap">Register now</a></li>
+                <li><a data-toggle="elementscroll" href="https://www.urbanacro.com/events/dap">Register now</a></li>
                 <li><a data-toggle="elementscroll" href="#info">About</a></li>
                 <li><a data-toggle="elementscroll" href="#teachers">Teachers</a></li>
                 <li><a data-toggle="elementscroll" href="#program">Program</a></li>
@@ -1617,7 +1617,7 @@
                         </div>
                     </div>
 					          <div class="col-lg-12 text-center">
-                    	<a class="button button-small button-line-dark" href="https://acrolama.com/events/dap">register now</a>
+                    	<a class="button button-small button-line-dark" href="https://urbanacro.com/">register now</a>
                     </div>
 
                 </div>
@@ -1816,11 +1816,7 @@
                         <div id="sponsors-carousel">
 
                             <div class="sponsor">
-                              <a href="https://acrolama.com"><img class="img-responsive" src="{% static "dap/img/sponsor1.png" %}" alt=""></a>
-                            </div>
-
-                            <div class="sponsor">
-                              <a href="http://prijenacro.com"><img class="img-responsive" src="{% static "dap/img/sponsor2.png" %}" alt=""></a>
+                              <a href="https://urbanacro.com"><img class="img-responsive" src="{% static "dap/img/sponsor1.png" %}" alt=""></a>
                             </div>
 
                             <div class="sponsor">
@@ -1882,10 +1878,10 @@
 
                     <div class="col-lg-12">
                         <ul class="list-unstyled list-inline pull-right uppercase">
-                            <li><a href="https://acrolama.com/dap">Terms</a></li>
-                            <li><a href="https://acrolama.com/dap">Privacy Policy</a></li>
-                            <li><a href="https://acrolama.com/dap">FAQ</a></li>
-                            <li><a href="mailto:acrolama@acrolama.com">Contact</a></li>
+                            <li><a href="https://urbanacro.com/dap">Terms</a></li>
+                            <li><a href="https://urbanacro.com/dap">Privacy Policy</a></li>
+                            <li><a href="https://urbanacro.com/dap">FAQ</a></li>
+                            <li><a href="mailto:hello@urbanacro.com">Contact</a></li>
                         </ul>
                     </div>
 
